<resources>
    <string name="app_name">socketio-chat-demo</string>

    <string name="goto_settings">You must approve this permission in Permissions in the app settings on your device to continue using the app.</string>
    <string name="settings">Settings</string>

    //Signup
    <string name="sign_up">Sign up</string>
    
    //Home
    <string name="username">Username</string>
    <string name="name_room">Name room</string>
    <string name="login">Login</string>
    <string name="empty_input">Empty input</string>

    //Chat
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="typing">User is typing…</string>
    <string name="image_mimetype">image/mpeg</string>
    <string name="video_mimetype">video/mp4</string>
    <string name="audio_mimetype">audio/mpeg</string>
    <string name="text">text</string>
    <string name="image">image</string>
    <string name="video">video</string>
    <string name="audio">audio</string>
</resources>