<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.socketio_chat_demo.ui.chat.ChatViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcChat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="@{viewModel.isTyping()?View.VISIBLE:View.GONE}">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/typing"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnUpload"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:background="?attr/selectableItemBackground"
                app:srcCompat="@drawable/ic_add"
                app:tint="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtMsg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_message"
                android:onTextChanged="@{viewModel.onTextChanged}"
                android:text="@={viewModel.typeMessageLiveData}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.onSendMessage()}"
                android:text="@string/send" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>